fix layout problems

--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -8,12 +8,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   margin-bottom: 10px;
+}
+
+..quizz_logo img {
+  width: 100%;
 }
 
 .quizz_logo h3 {
   margin-top: 20px;
+  text-align: center;
 }
 
 .quizz_questions {
@@ -28,12 +32,13 @@
   font-size: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .quizz_options {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   margin: auto;
 }
 
@@ -41,7 +46,7 @@
   background-color: transparent;
   border-radius: 8px;
   border: 1px solid #18ab29;
-  width: 50%;
+  width: 48%;
   display: inline-block;
   cursor: pointer;
   color: #fff;
@@ -67,7 +72,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  text-align: center;
   width: 100%;
   height: 350px;
   background-color: #210239;
